--- a/CRUDExample/CRUDExample/src/main/resources/application.properties
+++ b/CRUDExample/CRUDExample/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CRUDExample
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/idm3productexample2
+spring.datasource.url=jdbc:mysql://localhost:3306/producttest
 
 spring.datasource.username=root
 #spring.datasource.password=secret
